@@ -11,7 +11,7 @@
 #	org.jcrontab.data.GenericSQLSource.password
 #	org.jcrontab.data.datasource
 #
-org.jcrontab.data.file = /home/iolalla/src/jcrontab/bin/crontab.xml
+org.jcrontab.data.file = /home/iolalla/src/jcrontab/etc/crontab.xml
 org.jcrontab.data.datasource = org.jcrontab.data.XMLSource
 org.jcrontab.Crontab.refreshFrequency = 3
 # Those lines are necessaty to parse the XML file
@@ -35,7 +35,7 @@ org.xml.sax.driver=org.apache.xerces.parsers.SAXParser
 #Those lines defines the default Logger for the system
 #org.jcrontab.log.Logger=jcrontabplugin.jEditLogger
 org.jcrontab.log.Logger=org.jcrontab.log.Log4JLogger
-org.jcrontab.log.log4J.Properties=/home/iolalla/src/jcrontab/bin/log4j.properties
+org.jcrontab.log.log4J.Properties=/home/iolalla/src/jcrontab/etc/log4j.properties
 #org.jcrontab.data.FileOpener=file
 #Those parameters are to get the Holidays from the system
 #org.jcrontab.data.holidaysource=org.jcrontab.data.HoliDayFileSource
